# moltis

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  biome.json  cliff.toml  fly.toml  justfile  render.yaml
.config/: nextest.toml
.do/: deploy.template.yaml
.entire/: settings.json
.github/workflows/: ci.yml  deb-packages.yml  homebrew.yml  release.yml  verify-signatures.yml
.superset/: config.json
apps/macos/Sources/: ConfigurationPane.swift
crates/agents/: Cargo.toml
crates/agents/src/: auth_profiles.rs  lib.rs  model.rs  prompt.rs  runner.rs  tool_registry.rs
crates/agents/src/providers/: anthropic.rs  async_openai_provider.rs  genai_provider.rs  github_copilot.rs  kimi_code.rs  mod.rs  openai.rs  openai_codex.rs  openai_compat.rs
crates/agents/src/providers/local_llm/: backend.rs  mod.rs
crates/auto-reply/src/: lib.rs
crates/browser/src/: container.rs  manager.rs  pool.rs  types.rs
crates/channels/: Cargo.toml
crates/channels/src/: channel_webhook_middleware.rs  contract.rs  lib.rs  otp.rs  plugin.rs  registry.rs
crates/chat/src/: lib.rs
crates/cli/src/: auth_commands.rs  doctor_commands.rs  main.rs  node_commands.rs  sandbox_commands.rs
crates/config/: Cargo.toml
crates/config/src/: env_subst.rs  lib.rs  loader.rs  provider_env.rs  schema.rs  template.rs  validate.rs  version.rs
crates/cron/src/: service.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: agent_persona.rs  auth.rs  auth_middleware.rs  auth_routes.rs  auth_webauthn.rs  broadcast.rs  channel.rs  channel_events.rs  channel_webhook_dedup.rs  channel_webhook_middleware.rs  channel_webhook_rate_limit.rs  chat.rs  lib.rs  local_llm_setup.rs  mcp_service.rs  methods.rs  nodes.rs  pairing.rs  provider_setup.rs  server.rs  services.rs  session.rs  state.rs  update_check.rs  voice.rs  ws.rs
crates/gateway/src/assets/: app.js  index.html  style.css
crates/gateway/src/assets/css/: chat.css  components.css  layout.css
crates/gateway/src/assets/js/: app.js  helpers.js  onboarding-view.js  page-channels.js  page-chat.js  page-crons.js  page-hooks.js  page-mcp.js  page-metrics.js  page-plugins.js  page-providers.js  page-settings.js  page-skills.js  projects.js  providers.js  sessions.js  ui.js  websocket.js  ws-connect.js
crates/gateway/src/methods/: services.rs
crates/gateway/tests/: auth_middleware.rs  chat_ui.rs
crates/gateway/ui/: input.css
crates/gateway/ui/e2e/: helpers.js
crates/gateway/ui/e2e/specs/: chat-input.spec.js  websocket.spec.js
crates/mcp/: Cargo.toml
crates/mcp/src/: auth.rs  client.rs  lib.rs  manager.rs  registry.rs  remote.rs  sse_transport.rs  tool_bridge.rs  transport.rs
crates/media/src/: lib.rs  store.rs
crates/memory/: Cargo.toml
crates/memory/src/: embeddings_openai.rs  lib.rs
crates/metrics/src/: definitions.rs  store.rs
crates/msteams/: Cargo.toml
crates/msteams/src/: channel_webhook_verifier.rs  lib.rs  plugin.rs
crates/node-host/: Cargo.toml
crates/node-host/src/: runner.rs  service.rs
crates/oauth/: Cargo.toml
crates/oauth/src/: callback_input.rs  callback_server.rs  defaults.rs  device_flow.rs  flow.rs  lib.rs  pkce.rs  registration_store.rs  storage.rs  types.rs
crates/oauth/tests/: oauth_tests.rs
crates/onboarding/src/: service.rs  wizard.rs
crates/plugins/src/: install.rs  lib.rs
crates/projects/src/: worktree.rs
crates/provider-setup/src/: lib.rs
crates/providers/src/: anthropic.rs  lib.rs  openai.rs  openai_codex.rs
crates/providers/src/local_llm/: backend.rs
crates/routing/src/: resolve.rs
crates/service-traits/src/: lib.rs
crates/sessions/src/: compaction.rs  key.rs  lib.rs  metadata.rs
crates/skills/src/: install.rs
crates/slack/: Cargo.toml
crates/slack/src/: channel_webhook_verifier.rs  lib.rs  plugin.rs  webhook.rs
crates/swift-bridge/src/: lib.rs
crates/telegram/: Cargo.toml
crates/telegram/src/: bot.rs  config.rs  handlers.rs  otp.rs  outbound.rs  plugin.rs
crates/tools/src/: approval.rs  browser.rs  exec.rs  lib.rs  policy.rs  process.rs  sandbox.rs  sandbox_packages.rs  spawn_agent.rs  web_fetch.rs  web_search.rs
crates/voice/src/: config.rs  lib.rs
crates/voice/src/stt/: elevenlabs.rs
crates/web/src/: api.rs  lib.rs  spa.rs  templates.rs
crates/web/src/assets/css/: components.css
crates/web/src/assets/js/: app.js  gon.js  nodes-selector.js  onboarding-view.js  page-mcp.js  page-nodes.js  page-settings.js  provider-oauth.js  providers.js  sessions.js  websocket.js  ws-connect.js
crates/web/src/templates/: index.html  setup-required.html
crates/web/ui/: input.css
crates/web/ui/e2e/: base-test.js  mock-oauth-server.js
crates/web/ui/e2e/specs/: chat-abort.spec.js  (+8 more)
crates/whatsapp/: Cargo.toml
crates/whatsapp/src/: connection.rs  handlers.rs  plugin.rs  sled_store.rs  state.rs
docs/src/: SUMMARY.md  authentication.md  channels.md  cloud-deploy.md  configuration.md  docker.md  installation.md  local-llm.md  mcp.md  providers.md  sandbox.md  security.md  slack.md  telegram.md
examples/: docker-compose.coolify.yml  docker-compose.yml
features/: session-feedback.md
plans/: 2026-02-17-calver-yyyy-m-ddnn-migration-plan.md
prompts/: session-2026-03-11-docker-in-docker-host-data-dir.md
scripts/: check-changelog-guard.sh  local-validate-pr.sh  local-validate.sh  prepare-release.sh
website/: releases.json
(+4 files in other folders)
