[package]
name = "moltis-agents"
version.workspace = true
edition.workspace = true

[features]
default = ["provider-genai", "provider-async-openai"]
provider-genai = ["dep:genai"]
provider-async-openai = ["dep:async-openai"]

[dependencies]
moltis-common = { workspace = true }
moltis-config = { workspace = true }
moltis-sessions = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tokio-stream = { workspace = true }
async-stream = "0.3"

# Optional LLM provider crates
genai = { workspace = true, optional = true }
async-openai = { workspace = true, optional = true }
