[package]
name = "moltis-config"
version.workspace = true
edition.workspace = true

[dependencies]
moltis-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
directories = { workspace = true }
