[package]
edition.workspace = true
name              = "moltis-memory"
version.workspace = true

[dependencies]
anyhow        = { workspace = true }
async-trait   = "0.1"
moltis-agents = { workspace = true }
moltis-common = { workspace = true }
reqwest       = { workspace = true }
secrecy       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
sha2          = { workspace = true }
sqlx          = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
walkdir       = "2"

[dev-dependencies]
tempfile = "3"
