[package]
edition.workspace = true
name              = "moltis-node-host"
version.workspace = true

[features]
default = ["metrics"]
metrics = ["dep:moltis-metrics"]

[dependencies]
anyhow            = { workspace = true }
futures           = { workspace = true }
moltis-config     = { workspace = true }
moltis-metrics    = { optional = true, workspace = true }
moltis-protocol   = { workspace = true }
reqwest           = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
sysinfo           = { workspace = true }
tokio             = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing           = { workspace = true }
url               = { workspace = true }
uuid              = { workspace = true }
which             = { workspace = true }

[dev-dependencies]
tokio = { features = ["macros", "rt-multi-thread"], workspace = true }

[lints]
workspace = true
